--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "^4.5.2",
     "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "vite": "^6.3.5"
   }
 }
