--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "simple-zustand-devtools": "^1.1.0",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
+    "@types/node": "^24.0.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.5.2",
